// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageNotFound renders a 404 page 1`] = `
<div
  className="FourOhFour"
>
  <div
    className="bg"
    style={
      Object {
        "backgroundImage": "url(https://i.giphy.com/media/sMABNWsUWPC1y/giphy.gif)",
      }
    }
  />
  <h1
    className="code"
  >
    404
  </h1>
</div>
`;

exports[`PageNotFound renders a 404 page 2`] = `
<div
  className="FourOhFour"
>
  <div
    className="bg"
    style={
      Object {
        "backgroundImage": "url(myimage.jpg)",
      }
    }
  />
  <h1
    className="code"
  >
    404
  </h1>
</div>
`;
